k8s/fibonacci-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci-client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: fibonacci-client
          image: guygaver/fibonacci-react-client
          ports:
            - containerPort: 3000
