k8s/fibonacci-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: fibonacci-server
          image: guygaver/fibonacci-node-server
          ports:
            - containerPort: 5000
