k8s/fibonacci-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: fibonacci-worker
          image: guygaver/fibonacci-redis-worker
