k8s/fibonacci-postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  fibonacci-postgres-cluster-ip-service
spec:
  selector:
    component: postgres
  type: ClusterIP
  ports:
  - port:  5432
    targetPort:  5432
