k8s/fibonacci-server-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-server-ip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000
      targetPort: 5000
